--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
         </dependency>
         <!-- END Main Dependencies -->
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+        <dependency>
             <groupId>com.clickconcepts.logging</groupId>
             <artifactId>clickconcepts-logging</artifactId>
             <version>0.01</version>
@@ -57,6 +67,11 @@
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.9</version>
         </dependency>
     </dependencies>
     <build>
